@@ -4,7 +4,7 @@ AC_PROG_CC
 AC_PROG_LIBTOOL
 
 PKG_CHECK_MODULES(CCOMPILE, mono glib-2.0)
-PKG_CHECK_MODULES(GTKSHARP, gtk-sharp-2.0)
+PKG_CHECK_MODULES(GTKSHARP, gtk-sharp-2.0 gtk-dotnet-2.0)
 
 AC_PATH_PROG(MCS, mcs)
 AC_PATH_PROG(MONO, mono)
