@@ -1,3 +1,7 @@
+2005-01-11  Ben Maurer  <bmaurer@ximian.com>
+
+	* configure.in: Check for gtk-dotnet-2.0
+
 2005-01-09  Ben Maurer  <bmaurer@ximian.com>
 
 	* *: Initial Import.
